<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Setting">

        <TextView
            android:id="@+id/manage_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/manage_notifications"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/terms_and_conditions"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/terms_and_conditions_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_about"
            android:textSize="16sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:visibility="gone"
            android:paddingBottom="16dp"/>



        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/about"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_about"
            android:textSize="16sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorAccent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/version"
            android:textSize="18sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_version"
            android:textSize="16sp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="16dp"/>
    </LinearLayout>
</ScrollView>