<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp">

    <TextView
        android:id="@+id/later_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/later"
        android:layout_marginEnd="12dp"
        android:layout_gravity="end"
        android:textSize="20sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic_request"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:src="@drawable/img"/>

    <TextView
        android:id="@+id/username_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/loading"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/accept_request"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="6dp"
            android:background="@drawable/button_follow"
            android:text="@string/accept"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/reject_request"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/button_follow"
            android:text="@string/reject"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>