<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgot_reset"
    android:background="@drawable/background_ui"
    tools:context=".ForgotPasswordActivity"
    tools:ignore="ResourceName">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="16dp">


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/sefnet"
                app:srcCompat="@drawable/welcome_sesyme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="14dp"
                android:text="@string/forgot_password_msg"
                android:textColor="@android:color/white"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/registered_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/et_ui"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white"
                tools:ignore="Autofill" />


            <!-- Login Button -->

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/button_interests"
                android:text="@string/btn_reset_password"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/backToLoginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/button_interests"
                android:text="@string/btn_back"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>


</RelativeLayout>