<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_subscription_option"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e8e8e8"
    android:paddingBottom="38dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/iconsColor"
            android:gravity="center"
            android:text="@string/select_group"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textSize="12sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#e8e8e8"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_offline_pin_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_premium_note"
                android:textColor="#3b3d3e"
                android:gravity="start"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="16dp"
            android:elevation="2dp"
            card_view:cardCornerRadius="4dp">

            <RadioGroup
                android:id="@+id/rg_payment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rb_free_trial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/free_trial"
                    android:textColor="#3b3d3e"
                    android:textSize="22sp"
                    android:textStyle="bold"  />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/free_trial_description"
                        android:textSize="10sp"
                        android:paddingBottom="10dp"
                        tools:ignore="SmallSp" />

                <View
                    android:id="@+id/viewBottom"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/gray" />

                    <RadioButton
                        android:id="@+id/rb_premium"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/premium_version"
                        android:textColor="#3b3d3e"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/premium_description"
                        android:textSize="10sp"
                        android:paddingBottom="10dp"
                        tools:ignore="SmallSp"  />
            </RadioGroup>
        </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/bt_pay_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_follow"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter"
                android:text="@string/continue_payment"
                tools:ignore="ButtonStyle,ContentDescription" />

    </LinearLayout>
</ScrollView>
